[package]
name = "write-to-usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = { version = "3.1.0", features = ["derive"] }

[build-dependencies]
bindgen = "0.59.2"
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
